# vvcodec

./: CMakeLists.txt  README.md
app/: vvdecapp.cpp  vvencapp.cpp
utils/: ParseArg.h  VVEncAppCfg.h  vvencCfg.cpp  vvencCfg.h
